[gd_scene load_steps=6 format=3 uid="uid://o0a54e1hegug"]

[ext_resource type="Script" uid="uid://bdiy7eqm1bnty" path="res://addons/o2/src/EditorExtensions/Controls/EditorThemeTypeListPicker.gd" id="1_bxo5q"]
[ext_resource type="Script" uid="uid://esqxcw7d4l6a" path="res://addons/plugin_devtools/src/controls/CopyNotifier.gd" id="2_6hgjt"]
[ext_resource type="Script" uid="uid://dg52ydkn8cb5v" path="res://addons/o2/src/EditorExtensions/Controls/EditorThemeIconFlowContainer.gd" id="2_p7fwl"]
[ext_resource type="Script" uid="uid://bepnqbb46wygl" path="res://addons/plugin_devtools/src/controls/EditorStylesPanelContainer.gd" id="3_6hgjt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kgr5"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.09068625, 0.09068625, 0.09068625, 1)
corner_detail = 1
anti_aliasing = false

[node name="Icons" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
metadata/_edit_lock_ = true
metadata/_tab_index = 0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="LineEdit" type="LineEdit" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Icons"
context_menu_enabled = false
clear_button_enabled = true

[node name="OptionButton" type="OptionButton" parent="GridContainer"]
layout_mode = 2
selected = 0
item_count = 32
popup/item_0/text = "EditorIcons"
popup/item_0/id = 0
popup/item_1/text = "OptionButton"
popup/item_1/id = 1
popup/item_2/text = "CheckButton"
popup/item_2/id = 2
popup/item_3/text = "CheckBox"
popup/item_3/id = 3
popup/item_4/text = "Tree"
popup/item_4/id = 4
popup/item_5/text = "TabContainer"
popup/item_5/id = 5
popup/item_6/text = "TabBar"
popup/item_6/id = 6
popup/item_7/text = "LineEdit"
popup/item_7/id = 7
popup/item_8/text = "TextEdit"
popup/item_8/id = 8
popup/item_9/text = "SplitContainer"
popup/item_9/id = 9
popup/item_10/text = "VSplitContainer"
popup/item_10/id = 10
popup/item_11/text = "HSplitContainer"
popup/item_11/id = 11
popup/item_12/text = "FoldableContainer"
popup/item_12/id = 12
popup/item_13/text = "Window"
popup/item_13/id = 13
popup/item_14/text = "FileDialog"
popup/item_14/id = 14
popup/item_15/text = "PopupMenu"
popup/item_15/id = 15
popup/item_16/text = "HScrollBar"
popup/item_16/id = 16
popup/item_17/text = "VScrollBar"
popup/item_17/id = 17
popup/item_18/text = "HSlider"
popup/item_18/id = 18
popup/item_19/text = "VSlider"
popup/item_19/id = 19
popup/item_20/text = "SpinBox"
popup/item_20/id = 20
popup/item_21/text = "GraphEdit"
popup/item_21/id = 21
popup/item_22/text = "GraphEditMinimap"
popup/item_22/id = 22
popup/item_23/text = "GraphElement"
popup/item_23/id = 23
popup/item_24/text = "GraphNode"
popup/item_24/id = 24
popup/item_25/text = "ColorPicker"
popup/item_25/id = 25
popup/item_26/text = "ColorPickerButton"
popup/item_26/id = 26
popup/item_27/text = "ColorPresetButton"
popup/item_27/id = 27
popup/item_28/text = "ProjectManager"
popup/item_28/id = 28
popup/item_29/text = "EditorSpinSlider"
popup/item_29/id = 29
popup/item_30/text = "AssetLib"
popup/item_30/id = 30
popup/item_31/text = "CodeEdit"
popup/item_31/id = 31
script = ExtResource("1_bxo5q")

[node name="LabelAndCopiedLine" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/LabelAndCopiedLine"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
clip_text = true
text_overrun_behavior = 1

[node name="Copied" type="TextureRect" parent="GridContainer/LabelAndCopiedLine"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 5
script = ExtResource("2_6hgjt")

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="GridContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 20.0
max_value = 44.0
value = 32.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_5kgr5")
script = ExtResource("3_6hgjt")
panel_style = "Background"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Icons" type="HFlowContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_p7fwl")

[connection signal="text_changed" from="GridContainer/LineEdit" to="PanelContainer/ScrollContainer/Icons" method="filter"]
[connection signal="type_selected" from="GridContainer/OptionButton" to="PanelContainer/ScrollContainer/Icons" method="set_theme_type"]
[connection signal="value_changed" from="GridContainer/HBoxContainer2/HSlider" to="PanelContainer/ScrollContainer/Icons" method="set_item_size"]
[connection signal="button_pressed" from="PanelContainer/ScrollContainer/Icons" to="GridContainer/LabelAndCopiedLine/Copied" method="show_and_fade"]
[connection signal="mouse_hovered_button" from="PanelContainer/ScrollContainer/Icons" to="GridContainer/LabelAndCopiedLine/Label" method="set_text"]
